12-Microservices-Deployment-on-EKS/kube-manifests/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-ums
  labels:
    app.kubernetes.io/name: ses-email-fullstack
