12-Microservices-Deployment-on-EKS/kube-manifests/06-fastapi-email-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ses-email-fullstack-service
  namespace: ns-ums
  labels:
    app: ses-email-fullstack
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  type: ClusterIP
  selector:
    app: ses-email-fullstack
  ports:
    - name: http
      port: 80
      targetPort: 8000
